# portable-platform-infra

./: .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  readme.md
.github/workflows/: backup.yml  ci.yml  cluster-health-check.yaml  cluster-health-check.yml  deploy-prod.yml  validate-manifests.yml
ansible/: README.md  ansible.cfg  bootstrap-cluster.sh  bootstrap.sh  inventory.generated.yml  inventory.yml  playbook-k3s-only.yml  playbook.yml  render-inventory.sh
ansible/group_vars/: all.yml  k3s_agents.yml.example
config/: oauth_config.example.env  service_config.example.json
config/secrets/: README.md
deploy/: README.md  SETUP.md
deploy/argocd/: ARGOCD-AUTODEPLOY.md  application-myapp.yaml  repository-secret.example.yaml  sync-repo-secret.sh
deploy/docs/: ARCHITECTURE-K8S.md  INDEX.md  SERVICE-MATRIX.md  architecture-cluster-myapp.tex  architecture-projet-myapp.tex
deploy/k8s/: CHECKLIST.md  DEPLOYMENT.md  README.md  TESTING.md  kustomization.yaml  secrets.env.example
deploy/k8s/apps/: ingress-ip.yaml  ingressroute-frontend.yaml  kustomization.yaml
deploy/k8s/argocd/: README.md  argocd-cmd-params-patch.yaml  argocd-server-clusterrole-list-patch.json  ingress-ip.yaml  ingress.yaml  install.yaml  kustomization.yaml  middleware-strip-prefix.yaml  namespace.yaml
deploy/k8s/base/: kustomization.yaml  limit-range.yaml  namespace.yaml  resource-quota.yaml
deploy/k8s/cert-manager/: cluster-issuer.yaml
deploy/k8s/cronjobs/: clean-disk-backend.yaml  clean-disk-frontend.yaml  clean-disk.yaml  clean-evicted-pods-rbac.yaml  clean-evicted-pods.yaml  etcd-backup.yaml  kustomization.yaml  maintenance-rbac.yaml  metamodel-health-check-rbac.yaml  metamodel-health-check.yaml
deploy/k8s/infra/: README.md  ghcr-secret.yaml.example  kustomization.yaml
deploy/k8s/scripts/: README-TUNNEL.md  (+11 more)
deploy/local/: docker-compose.yml
deploy/prod/: docker-compose.yml
docker/: .dockerignore  Dockerfile  docker-compose.yml  rate_limit_test.py  test_endpoints.sh
docs/: DEPLOYMENT.md  TESTING.md  openapi.yaml
include/: auth_manager.hpp  bcrypt_utils.hpp  config_loader.hpp  db.hpp  logger.hpp  metrics.hpp  ratelimiter.hpp  ratelimiter_global.hpp  subscription_manager.hpp  user_controller.hpp  user_service_api.hpp  validation.hpp
migrations/: 001_initialize_schema.sql
scripts/: README_METRICS.md  enhanced_production_smoke_test.sh  metrics_dashboard.sh  perf_smoke.sh  production_smoke_test.sh  robust_metrics_test.sh  run_coverage.sh  simple_metrics_test.sh  test_oauth.sh
src/: auth_manager.cpp  bcrypt_utils.cpp  config_loader.cpp  db.cpp  logger.cpp  main.cpp  metrics.cpp  ratelimiter.cpp  ratelimiter_global.cpp  subscription_manager.cpp  user_controller.cpp  user_service_api.cpp  validation.cpp
terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: test_auth_manager.cpp  test_auth_manager_edgecases.cpp  test_bcrypt_utils.cpp  test_config_loader.cpp  test_framework.hpp  test_logger.cpp  test_main.cpp  test_metrics.cpp  test_subscription_manager.cpp  test_user_controller.cpp  test_user_controller_edgecases.cpp  test_validation.cpp
tests/integration/: test_api.py
(+171 files in other folders)
